--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  email: MyString
-  password: MyString
-  role: MyString
+  name: "John Doe"
+  email: "john@example.com"
+  password: "password"
+  role: :owner
 
 two:
-  name: MyString
-  email: MyString
-  password: MyString
-  role: MyString
+  name: "Jane Smith"
+  email: "jane@example.com"
+  password: "securepassword"
+  role: :clinic_admin
